# sanjo

./: .gitignore  Cargo.toml  LICENSE  README.md  cli.yaml
.github/workflows/: release.yaml  tests.yaml
src/: color.rs  decoration.rs  main.rs  pair.rs
