[package]
name = "sanjo"
version = "1.1.0"
authors = ["Henrique Sasaki Yuya <moriturus@alimensir.com>"]
edition = "2018"
license = "MIT"
description = "A tiny *Image Processing Application* aims at simple to use."
repository = "https://github.com/moriturus/sanjo"
readme = "README.md"
keywords = ["image", "graphics"]
categories = ["graphics"]
documentation = "https://docs.rs/sanjo"

[dependencies]
clap = { version = "2.33.0", features = ["yaml"] }
log = "0.4.8"
env_logger = "0.7.1"
image = "0.22.3"
imageproc = "0.19.2"
rusttype = "0.8.2"
tokio = { version = "0.2.4", features = ["macros", "fs", "io-driver", "io-util", "io-std"] }
num-traits = "0.2.10"
arrayvec = "0.5.1"
failure = "0.1.6"
